src/objects/ISSP_SIS_Users__c.object
<CustomObject>
    <fields>
        <fullName>Account_IATA_Code__c</fullName>
        <formula>Contact__r.Account.IATACode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account IATA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ISO_Country_Code__c</fullName>
        <formula>Contact__r.Account.IATA_ISO_Country__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ISO Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Contact__r.Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Contact__r.Account.Region_formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ISSP SIS Users</relationshipLabel>
        <relationshipName>ISSP_SIS_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_SIS_Id__c</fullName>
        <formula>Contact__r.SIS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact SIS Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <formula>TEXT(Contact__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ISSP SIS Users</relationshipLabel>
        <relationshipName>ISSP_SIS_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_New_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created New User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IFAP_Contact__c</fullName>
        <formula>Contact__r.Financial_Assessment_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFAP Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIS_AIRLINE_DESIGNATOR_C1__c</fullName>
        <label>SIS_AIRLINE_DESIGNATOR_C1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_CONTACTID__c</fullName>
        <label>SIS_CONTACTID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_DEPARTMENT__c</fullName>
        <label>SIS_DEPARTMENT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_FAX1__c</fullName>
        <label>SIS_FAX1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_FIRSTNAME__c</fullName>
        <label>SIS_FIRSTNAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_LASTNAME__c</fullName>
        <label>SIS_LASTNAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_MEMBERID__c</fullName>
        <label>SIS_MEMBERID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_MEMBER_CODE_NUMERIC_C1__c</fullName>
        <label>SIS_MEMBER_CODE_NUMERIC_C1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_MOBILEPHONE__c</fullName>
        <label>SIS_MOBILEPHONE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_PHONE1__c</fullName>
        <label>SIS_PHONE1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_SALUTATION__c</fullName>
        <label>SIS_SALUTATION</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_TITLE__c</fullName>
        <label>SIS_TITLE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_TYPE_OF_CONTACT_C__c</fullName>
        <label>SIS_TYPE_OF_CONTACT_C</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Create_New_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Create New User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Grant_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Grant Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Portal_Status__c</fullName>
        <formula>TEXT( Contact__r.User_Portal_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Portal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ISSP_SIS_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ISSP SIS Users</label>
    <nameField>
        <displayFormat>SISUser-{000000}</displayFormat>
        <label>ISSP SIS Users Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISSP SIS Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>